# fltkhs-gl-demos

./: README.md  Setup.hs  fltkhs-gl-demos.cabal  stack.yaml
src/: Triangle.fl  cube.hs  triangle.hs
