name: fltkhs-gl-demos
version: 0.0.0.1
synopsis: FLTKHS OpenGL Demos
description: Demos showing how FLTKHS integrates with OpenGL
license: MIT
license-file: LICENSE
author: Aditya Siram
build-type: Custom
maintainer: aditya.siram@gmail.com
homepage: http://github.com/deech/fltkhs-gl-demos
category: UI,Graphics
cabal-version: >=1.20
extra-source-files: src/Triangle.fl
source-repository head
  type: git
  location: http://github.com/deech/fltkhs-gl-demos

Flag FastCompile
   Description: Turn off optimizations for faster compilation
   Manual: True
   Default: False

Executable fltkhs-gl-cube
  Main-Is: cube.hs
  Hs-Source-Dirs: src/
  build-depends:
    base == 4.*,
    fltkhs >= 0.5.3.5,
    text >= 1.2.2.0,
    OpenGLRaw >= 3 && < 3.3
  default-language: Haskell2010
  ghc-Options: -debug -dcore-lint
  if impl(ghc >= 7.10) && flag(FastCompile)
     ghc-Options: -fno-specialise -fmax-simplifier-iterations=0 -fsimplifier-phases=0
  else
     ghc-Options: -O2
  if os(windows)
   ghc-Options: -pgml g++ "-optl-Wl,--whole-archive" "-optl-Wl,-Bstatic" "-optl-Wl,-lfltkc" "-optl-Wl,-Bdynamic" "-optl-Wl,--no-whole-archive"
  if os(darwin)
   ghc-Options: "-optl-Wl,-lfltkc"
  if !os(darwin) && !os(windows)
   ghc-Options: -pgml g++ "-optl-Wl,--whole-archive" "-optl-Wl,-Bstatic" "-optl-Wl,-lfltkc" "-optl-Wl,-Bdynamic" "-optl-Wl,--no-whole-archive"

Executable fltkhs-gl-triangle
  Main-Is: triangle.hs
  Hs-Source-Dirs: src/
  build-depends:
    base == 4.*,
    fltkhs >= 0.5.3.5,
    text >= 1.2.2.0,
    OpenGLRaw >= 3 && < 3.3
  default-language: Haskell2010
  ghc-Options: -debug -dcore-lint
  Other-Modules: Triangle
  if impl(ghc >= 7.10) && flag(FastCompile)
     ghc-Options: -fno-specialise -fmax-simplifier-iterations=0 -fsimplifier-phases=0
  else
     ghc-Options: -O2
  if os(windows)
   ghc-Options: -pgml g++ "-optl-Wl,--whole-archive" "-optl-Wl,-Bstatic" "-optl-Wl,-lfltkc" "-optl-Wl,-Bdynamic" "-optl-Wl,--no-whole-archive"
  if os(darwin)
   ghc-Options: "-optl-Wl,-lfltkc"
  if !os(darwin) && !os(windows)
   ghc-Options: -pgml g++ "-optl-Wl,--whole-archive" "-optl-Wl,-Bstatic" "-optl-Wl,-lfltkc" "-optl-Wl,-Bdynamic" "-optl-Wl,--no-whole-archive"